added-validation-of-users

--- a/src/main/resources/db/changelog/changes/03-create-users-table.yaml
+++ b/src/main/resources/db/changelog/changes/03-create-users-table.yaml
@@ -35,3 +35,9 @@ databaseChangeLog:
                   defaultValueBoolean: false
                   constraints:
                     nullable: false
+              - column:
+                  name: is_verified
+                  type: boolean
+                  defaultValueBoolean: false
+                  constraints:
+                    nullable: false
