--- a/src/main/resources/db/changelog/changes/05-add-default-admin-user.yaml
+++ b/src/main/resources/db/changelog/changes/05-add-default-admin-user.yaml
@@ -15,6 +15,9 @@ databaseChangeLog:
               - column:
                   name: full_name
                   value: "Admin User"
+              - column:
+                  name: is_verified
+                  value: 1
         - insert:
             tableName: users_roles
             columns:
