--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,3 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-jwt.expiration=86400000
-jwt.secret=very-very-long-and-secret-key-qwerty123!!!
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
