added-new-cors-filter

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
     depends_on:
       - mysqldb
     restart: on-failure
-    image: online-book-store
+    image: volunteer-bridge
     build: .
     env_file: ./.env
     ports:
